20. Final Mega Capstone Project/projects/03-node-booking-microservices/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: booking-node
  labels:
    app.kubernetes.io/part-of: booking
    pod-security.kubernetes.io/enforce: restricted
